Set minimum width of the search input widget to 0 to prevent overflow when using a larger browser font size

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -135,6 +135,7 @@
 .search-input {
   width: 100%;
   height: 100%;
+  min-width: 0;
   border: none;
   box-shadow: 0px 2px 0px 0px theme-color('kabum-dark-blue');
 }
